--- a/BackEndCapstone/Views/Home/Index.cshtml
+++ b/BackEndCapstone/Views/Home/Index.cshtml
@@ -19,13 +19,13 @@
 <div id="carouseControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="~/images/Home1.png" alt="First slide">
+            <img class="d-block w-100" src="~/images/Home1.png" style="height: 500px" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100"  src="~/images/home14.jpg" alt="Second slide">
+            <img class="d-block w-100"  src="~/images/home14.jpg" style="height: 500px" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/images/home13.png" alt="third slide">
+            <img class="d-block w-100" src="~/images/home13.png" style="height: 500px" alt="third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -60,10 +60,3 @@
     </a>
 </div>*@
 
-<div class="text-center">
-    <h1 class="display-4">Jewelry By Aryn</h1>
-    <p>Add some sort of meaningful quote or trendy catch phrase here</a>.</p>
-</div>
-
-
-src="~/images//Home1.png"
