--- a/BackEndCapstone/wwwroot/css/site.css
+++ b/BackEndCapstone/wwwroot/css/site.css
@@ -89,3 +89,11 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+.carousel-inner > .item {
+    height: 400px;
+}
+
+.w-100 {
+    height: 450px !important;
+}
